--- a/frontend/styles/scss/main/_humberger.scss
+++ b/frontend/styles/scss/main/_humberger.scss
@@ -5,6 +5,9 @@
     }
     .logo img {
         max-width: 120px;
+        width: auto;
+        height: auto;
+        object-fit: contain;
     }
 }
 
